--- a/src/assets/scss/_speciality.scss
+++ b/src/assets/scss/_speciality.scss
@@ -25,8 +25,9 @@
   &-grid {
     display: grid;
     margin-top: 5em;
-    grid-gap: 3em;
+    grid-gap: 2em;
     grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(2, 1fr);
 
     &-block {
       transition: all 0.5s;
